--- a/index.html
+++ b/index.html
@@ -193,6 +193,37 @@
         </a>
     </div>
 
+    <section class="mea-about-section section-padding">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-md-6 mea-title-section wow animated slideInLeft" data-wow-delay=".2s">
+                    <h1 class="section-titile-bg">Comités de Lucha</h1>
+                    <h1 class="section-title">Acerca de los Comités de Lucha</h1>
+                </div>
+
+                <div class="col-md-6 mea-section-quote wow animated slideInRight" data-wow-delay=".2s">
+                    <blockquote>
+                        <p>We are a strategic, creative studio based out of Savannah, Georgia. Our close team of innovative professionals is passionate about partnering with good people and organizations.</p>
+                    </blockquote>
+                </div>
+            </div>
+            <div class="row mt-80">
+
+                <div class="col-md-6 about-widget wow animated fadeInUp" data-wow-delay=".4s">
+                    <i class="material-icons">&#xE90F;</i>
+                    <h2 class="subtitle">¿Quiénes somos?</h2>
+                    <p>Excepteur sint occaecat cupidatat non proidt, sunt in culpa qui officia deserunt mollit <br>animidest laborum.</p>
+                </div>
+
+                <div class="col-md-6 about-widget wow animated fadeInUp" data-wow-delay=".5s">
+                    <i class="material-icons">&#xE8F1;</i>
+                    <h2 class="subtitle">Plataforma de Lucha</h2>
+                    <p>Excepteur sint occaecat cupidatat non proidt, sunt in culpa qui officia deserunt mollit <br>animidest laborum.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <section class="mea-portfolio-section section-padding section-dark">
         <div class="container">
@@ -358,7 +389,7 @@
             <div class="row">
 
                 <div class="col-md-6 mea-title-section wow animated slideInLeft" data-wow-delay=".2s">
-                    <h1 class="section-titile-bg">Redes</h1>
+                    <h1 class="section-titile-bg">Redes Sociales</h1>
                     <h1 class="section-title">Redes sociales</h1>
                     <div class="section-image mt-100 clearfix">
                         <img src="assets/images/section-image1.png" class="mt-100 img-responsive" alt="Thumbs Up Icon">
