agregar quienes somos

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
+
+    <link rel="stylesheet" href="/assets/css/estilosCL.css">
 </head>
 
 <body>
@@ -41,7 +43,7 @@
     <header id="header" class="navbar navbar-default affix-top" data-spy="affix" data-offset-top="400">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand site-logo" href="/">
+                <a class="navbar-brand site-logo vertical-align" href="/">
                     <img class="img-responsive img-circle pull-left" src="/assets/images/icono.png" width="80px" />
                     <h2 class="pull-left">Comités de Lucha</h2>
                 </a>
@@ -54,8 +56,8 @@
                     <li class="dropdown sub-menu">
                         <a class="dropdown-toggle nav-link" href="#" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Acerca de nosotros</a>
                         <div class="dropdown-menu sub-menu-panel" aria-labelledby="dropdownMenu1">
-                            <a class="sub-menu-item" href="quienes_somos.html">¿Quiénes somos?</a>
-                            <a class="sub-menu-item" href="plataforma_lucha.html">Plataforma de Lucha</a>
+                            <a class="sub-menu-item" href="/info/quienes_somos.html">¿Quiénes somos?</a>
+                            <a class="sub-menu-item" href="/info/plataforma_lucha.html">Plataforma de Lucha</a>
                         </div>
                     </li>
                     <li>
@@ -86,10 +88,10 @@
                         </a>
                         <ul class="dropdown">
                             <li>
-                                <a href="quienes_somos.html">¿Quiénes somos?</a>
+                                <a href="/info/quienes_somos.html">¿Quiénes somos?</a>
                             </li>
                             <li>
-                                <a href="plataforma_lucha.html">Plataforma de Lucha</a>
+                                <a href="/info/plataforma_lucha.html">Plataforma de Lucha</a>
                             </li>
                         </ul>
                     </li>
@@ -488,10 +490,12 @@
             <div class="container">
                 <div class="row">
 
-                    <div class="col-md-3 single-footer-widget wow animated fadeInUp" data-wow-delay=".2s">
-                        <h3 class="footer-title">Acerca de los comités de lucha</h3>
-                        <p>Fresh, innovative, creative, minimalist ... What's your style? You probably won't have a better chance to show off all your potential if it's not by designing a website for your own agency or web studio. It's time to push all those
-                            ideas and concepts forward.</p>
+                    <div class="col-md-3 single-footer-widget wow animated fadeInUp mx-auto" data-wow-delay=".2s">
+                        <div class="text-center">
+                            <img src="/assets/images/icono.png" width="200px" />
+                            <a id="login" class="btn btn-common" href="#">
+                                <i class="material-icons">login</i>Administrar</a>
+                        </div>
                     </div>
 
                     <div class="col-md-6 single-footer-widget recent-work-widget wow animated fadeInUp" data-wow-delay=".4s">
@@ -533,7 +537,7 @@
                     <div class="col-md-3 single-footer-widget footer-contact-widget wow animated fadeInUp" data-wow-delay=".5s">
                         <h3 class="footer-title">Contáctanos</h3>
                         <p><span>Teléfono:</span> 879-890-9767</p>
-                        <p><span>Span:</span> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="90e3e5e0e0ffe2e4d0fdf5f1bef3fffd">[email&#160;protected]</a></p>
+                        <p><span>Correo:</span> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="90e3e5e0e0ffe2e4d0fdf5f1bef3fffd">[email&#160;protected]</a></p>
                         <p><span>Twitter:</span> @mea</p>
                         <h3 class="footer-title mt-50">Síguenos en nuestras redes</h3>
                         <ul>
