--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="Páginas de los Comités de Lucha de Colombia">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
     <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
@@ -44,7 +45,7 @@
         <div class="container">
             <div class="navbar-header">
                 <a class="navbar-brand site-logo vertical-align" href="/">
-                    <img class="img-responsive img-circle pull-left" src="/assets/images/icono.png" width="80px" />
+                    <img class="img-responsive img-circle pull-left mt-20" src="/assets/images/icono.png" width="80px" />
                     <h2 class="pull-left">Comités de Lucha</h2>
                 </a>
             </div>
