inversion de titulos

--- a/info/plataforma_lucha.html
+++ b/info/plataforma_lucha.html
@@ -136,7 +136,7 @@
                 <div class="col-md-12">
                     <div class="title-center">
                         <div class="title-middle">
-                            <h2 class="page-tagline">¿Quiénes somos?</h2>
+                            <h2 class="page-tagline">Acerca de Nosotros</h2>
                             <h1 class="page-title">Plataforma de Lucha del Pueblo Colombiano</h1>
                         </div>
                     </div>
