--- a/info/quienes_somos.html
+++ b/info/quienes_somos.html
@@ -134,8 +134,8 @@
                 <div class="col-md-12">
                     <div class="title-center">
                         <div class="title-middle">
-                            <h2 class="page-tagline">¿Quiénes somos?</h2>
-                            <h1 class="page-title">Acerca de nosotros</h1>
+                            <h2 class="page-tagline">Acerca de Nosotros</h2>
+                            <h1 class="page-title">¿Quiénes somos?</h1>
                         </div>
                     </div>
                 </div>
