agregar imagenes de regiones

--- a/info/quienes_somos.html
+++ b/info/quienes_somos.html
@@ -229,7 +229,7 @@
 
                         <div class="">
                             <div class="single-team-widget">
-                                <img src="/assets/images/team/team1.png" class="img-responsive" alt="">
+                                <img src="/assets/images/quienes_somos/LogoBogota.jpg" class="center-block img-responsive" alt="">
                                 <div class="team-member-info">
                                     <div class="know-more">
                                         <a class="btn btn-round btn-fab btn-xs" href="javascript:void(0)"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
@@ -243,11 +243,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="item item">
+                    <div class="item">
 
                         <div class="">
                             <div class="single-team-widget">
-                                <img src="/assets/images/team/team2.png" class="img-responsive" alt="">
+                                <img src="/assets/images/quienes_somos/LogoCali.jpg" class="center-block img-responsive" alt="">
                                 <div class="team-member-info">
                                     <div class="know-more">
                                         <a class="btn btn-round btn-fab btn-xs" href="javascript:void(0)"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
@@ -265,7 +265,7 @@
 
                         <div class="">
                             <div class="single-team-widget">
-                                <img src="/assets/images/team/team3.png" class="img-responsive" alt="">
+                                <img src="/assets/images/quienes_somos/LogoMedellin.jpg" class="center-block img-responsive" alt="">
                                 <div class="team-member-info">
                                     <div class="know-more">
                                         <a class="btn btn-round btn-fab btn-xs" href="javascript:void(0)"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
