--- a/admon/noticias.html
+++ b/admon/noticias.html
@@ -55,7 +55,7 @@
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="noticias.html">Noticias</a></li>
+          <li><a id="enlace_noticias" href="noticias.html">Noticias</a></li>
           <li><a href="luchadores.html">Coordinación de luchadores</a></li>
           <li><a href="redesociales.html">Redes sociales</a></li>
         </ul>
@@ -71,38 +71,18 @@
         <p>Las últimas 3 noticias, ordenadas por fecha, serán presentados en la página inicial</p>
         <button type="button" class="btn btn-raised btn-primary" onclick="agregarNuevaNoticia()">Agregar nueva noticia</button>
         <div class="table-responsive">
-          <table class="table table-striped">
+          <table id="lista_examinar" class="table table-striped">
             <thead>
               <tr>
-                <th>#</th>
-                <th>Header</th>
-                <th>Header</th>
-                <th>Header</th>
-                <th>Header</th>
+                <th>Título</th>
+                <th>Fecha</th>
+                <th>Descripción</th>
+                <th>Editar</th>
+                <th>Eliminar</th>
               </tr>
             </thead>
             <tbody>
-              <tr>
-                <td>1,001</td>
-                <td>Lorem</td>
-                <td>ipsum</td>
-                <td>dolor</td>
-                <td>sit</td>
-              </tr>
-              <tr>
-                <td>1,002</td>
-                <td>amet</td>
-                <td>consectetur</td>
-                <td>adipiscing</td>
-                <td>elit</td>
-              </tr>
-              <tr>
-                <td>1,003</td>
-                <td>Integer</td>
-                <td>nec</td>
-                <td>odio</td>
-                <td>Praesent</td>
-              </tr>
+              
             </tbody>
           </table>
         </div>
@@ -144,7 +124,7 @@
                     <label>Noticia completa</label>
                     <textarea id="descripcion_noticia" name="editordata"></textarea>
                   </div>
-                  <button type="button" class="btn btn-raised btn-primary" onclick="guardarEvento()">Guardar
+                  <button type="button" class="btn btn-raised btn-primary" onclick="guardarNoticia()">Guardar
                     Noticia</button>
                   <div class="alert alert-danger" style="display: none;" role="alert"
                     id="problema_creando_noticia">
@@ -173,14 +153,14 @@
                 <div id="main-slide" class="carousel slide carousel-fade" data-ride="carousel">
                   <div class="carousel-inner">
                       <div class="item active">
-                          <img class="img-responsive" src="/assets/images/slider/slider-bg4.jpg" alt="slider">
+                          <img id="noticia-imagen-0"class="img-responsive" src="/assets/images/slider/slider-bg4.jpg" alt="slider">
                           <div class="slider-content">
                               <div class="container">
                                   <div class="row">
                                       <div class="col-md-12 text-left">
-                                          <h1 class="slideInLeft  wow hero-heading" >Título</h1>
-                                          <h5 class="fadeInDown wow  hero-sub-heading" >Subtíulo</h5>
-                                          <a href="#" class="fadeInUp wow btn btn-common" ><i class="material-icons">&#xE90F;</i> Encuentra más Información<div
+                                          <h1 id="noticia-titulo-0" class="slideInLeft  wow hero-heading" >Título</h1>
+                                          <h5 id="noticia-subtitulo-0" class="fadeInDown wow  hero-sub-heading" >Subtítulo</h5>
+                                          <a id="noticia-boton-0"  href="#" class="fadeInUp wow btn btn-common" ><i class="material-icons">&#xE90F;</i> Encuentra más Información<div
                                                   class="ripple-container"></div></a>
                                       </div>
                                   </div>
@@ -202,6 +182,7 @@
   <!-- Placed at the end of the document so the pages load faster -->
   <script src="/assets/js/jquery-min.js"></script>
   <script src="/assets/js/bootstrap.min.js"></script>
+  <script src="/assets/js/scriptCL.js"></script>
   <script src="/assets/js/admonNoticias.js"></script>
   <script src="/assets/datepicker/jquery.datetimepicker.full.js"></script>
   <script src="/assets/summernote-0.8.18-dist/summernote-lite.min.js"></script>
