agrega otras regiones

--- a/info/quienes_somos.html
+++ b/info/quienes_somos.html
@@ -21,15 +21,7 @@
     <link rel="stylesheet" href="/assets/css/animate.css">
     <link rel="stylesheet" href="/assets/css/style.css">
 
-    <link rel="stylesheet" href="/assets/css/switcher.css">
-
-    <link rel="stylesheet" href="/assets/css/colors/pink.css">
-    <link rel="stylesheet" href="/assets/css/colors/purple.css">
-    <link rel="stylesheet" href="/assets/css/colors/deep-purple.css">
-    <link rel="stylesheet" href="/assets/css/colors/indigo.css">
-    <link rel="stylesheet" href="/assets/css/colors/blue.css">
-    <link rel="stylesheet" href="/assets/css/colors/yellow.css">
-    <link rel="stylesheet" href="/assets/css/colors/green.css">
+    
     <link rel="stylesheet" href="/assets/css/colors/red.css">
     <link rel="stylesheet" href="/assets/css/responsive.css">
 
@@ -229,7 +221,7 @@
 
                         <div class="">
                             <div class="single-team-widget">
-                                <img src="/assets/images/quienes_somos/LogoBogota.jpg" class="center-block img-responsive" alt="">
+                                <img src="/assets/images/quienes_somos/LogoBogota.jpg" style="height: 400px;" class="center-block img-responsive" alt="">
                                 <div class="team-member-info">
                                     <div class="know-more">
                                         <a class="btn btn-round btn-fab btn-xs" href="javascript:void(0)"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
@@ -247,7 +239,25 @@
 
                         <div class="">
                             <div class="single-team-widget">
-                                <img src="/assets/images/quienes_somos/LogoCali.jpg" class="center-block img-responsive" alt="">
+                                <img src="/assets/images/quienes_somos/LogoBucaramanga.jpeg" style="height: 400px;" class="center-block img-responsive" alt="">
+                                <div class="team-member-info">
+                                    <div class="know-more">
+                                        <a class="btn btn-round btn-fab btn-xs" href="javascript:void(0)"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
+                                    </div>
+                                    <h2 class="subtitle">Bucaramanga</h2>
+                                    <div class="social-profiles">
+                                        <a href="#"><i class="fa fa-twitter"></i></a>
+                                        <a href="#"><i class="fa fa-facebook"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+
+                        <div class="">
+                            <div class="single-team-widget">
+                                <img src="/assets/images/quienes_somos/LogoCali.jpg" style="height: 400px;" class="center-block img-responsive" alt="">
                                 <div class="team-member-info">
                                     <div class="know-more">
                                         <a class="btn btn-round btn-fab btn-xs" href="javascript:void(0)"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
@@ -265,7 +275,25 @@
 
                         <div class="">
                             <div class="single-team-widget">
-                                <img src="/assets/images/quienes_somos/LogoMedellin.jpg" class="center-block img-responsive" alt="">
+                                <img src="/assets/images/quienes_somos/LogoManizales.jpeg" style="height: 400px;" class="center-block img-responsive" alt="">
+                                <div class="team-member-info">
+                                    <div class="know-more">
+                                        <a class="btn btn-round btn-fab btn-xs" href="javascript:void(0)"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
+                                    </div>
+                                    <h2 class="subtitle">Manizales</h2>
+                                    <div class="social-profiles">
+                                        <a href="#"><i class="fa fa-twitter"></i></a>
+                                        <a href="#"><i class="fa fa-facebook"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+
+                        <div class="">
+                            <div class="single-team-widget">
+                                <img src="/assets/images/quienes_somos/LogoMedellin.jpg" style="height: 400px;" class="center-block img-responsive" alt="">
                                 <div class="team-member-info">
                                     <div class="know-more">
                                         <a class="btn btn-round btn-fab btn-xs" href="javascript:void(0)"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
@@ -388,47 +416,12 @@
         </div>
     </div>
 
-    <div style="display:none" class="hide-color">
-        <div id="custumize-style">
-            <a href="#" class="switcher open"> <span class="icon-switcher"><i class="material-icons">&#xE3B7;</i></span></a>
-            <div>
-                <h3 class="color-option-title">Colors</h3>
-                <ul class="colors-style" id="custom-color">
-                    <li>
-                        <a href="#" class="red"></a>
-                    </li>
-                    <li>
-                        <a href="#" class="pink"></a>
-                    </li>
-                    <li>
-                        <a href="#" class="purple"></a>
-                    </li>
-                    <li>
-                        <a href="#" class="deep-purple"></a>
-                    </li>
-                    <li>
-                        <a href="#" class="indigo"></a>
-                    </li>
-                    <li>
-                        <a href="#" class="blue"></a>
-                    </li>
-                    <li>
-                        <a href="#" class="green"></a>
-                    </li>
-                    <li>
-                        <a href="#" class="yellow"></a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-
+    
 
 
     <script data-cfasync="false" src="/assets/js/email-decode.min.js"></script>
     <script src="/assets/js/jquery-min.js"></script>
     <script src="/assets/js/bootstrap.min.js"></script>
-    <script src="/assets/js/switcher.js"></script>
     <script src="/assets/js/jquery.mixitup.min.js"></script>
     <script src="/assets/js/jquery.inview.js"></script>
     <script src="/assets/js/jquery.counterup.min.js"></script>
