sección que sociedad queremos

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                         <div class="dropdown-menu sub-menu-panel" aria-labelledby="dropdownMenu1">
                             <a class="sub-menu-item" href="/info/quienes_somos.html">¿Quiénes somos?</a>
                             <a class="sub-menu-item" href="/info/plataforma_lucha.html">Plataforma de Lucha</a>
+                            <a class="sub-menu-item" href="/info/que_sociedad_queremos.html">¿Qué sociedad queremos?</a>
                         </div>
                     </li>
                     <li>
@@ -230,18 +231,25 @@
             </div>
             <div class="row mt-80">
 
-                <div class="col-md-6 about-widget wow animated fadeInUp clickleable" data-wow-delay=".4s"
+                <div class="col-md-4 about-widget wow animated fadeInUp clickleable" data-wow-delay=".4s"
                     onclick="irAPaginaInterna( 'info/quienes_somos.html')">
                     <i class="material-icons">groups</i>
                     <h2 class="subtitle">¿Quiénes somos?</h2>
                     <p>Ingresa en este enlace para conocer los detalles sobre los Comités y dónde encontrarlos.</p>
                 </div>
 
-                <div class="col-md-6 about-widget wow animated fadeInUp clickleable" data-wow-delay=".5s"
+                <div class="col-md-4 about-widget wow animated fadeInUp clickleable" data-wow-delay=".5s"
                     onclick="irAPaginaInterna( 'info/plataforma_lucha.html')">
                     <i class="material-icons">auto_stories</i>
                     <h2 class="subtitle">Plataforma de Lucha</h2>
                     <p>Una Propuesta para conquistar las reivindicaciones inmediatas del pueblo.</p>
+                </div>
+
+                <div class="col-md-4 about-widget wow animated fadeInUp clickleable" data-wow-delay=".6s"
+                    onclick="irAPaginaInterna( 'info/que_sociedad_queremos.html')">
+                    <i class="material-icons">flag</i>
+                    <h2 class="subtitle">¿Qué sociedad queremos?</h2>
+                    <p>Nuestras metas de sociedad.</p>
                 </div>
             </div>
         </div>
