--- a/info/quienes_somos.html
+++ b/info/quienes_somos.html
@@ -51,6 +51,7 @@
                         <div class="dropdown-menu sub-menu-panel" aria-labelledby="dropdownMenu1">
                             <a class="sub-menu-item" href="/info/quienes_somos.html">¿Quiénes somos?</a>
                             <a class="sub-menu-item" href="/info/plataforma_lucha.html">Plataforma de Lucha</a>
+                            <a class="sub-menu-item" href="/info/que_sociedad_queremos.html">¿Qué sociedad queremos?</a>
                         </div>
                     </li>
                     <li>
