--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
                             <a class="sub-menu-item" href="#">Asambleas Populares</a>
                             <a class="sub-menu-item" href="#">Coordinación por regiones</a>
                             <a class="sub-menu-item" href="#">Primera Línea</a>
+                            <a class="sub-menu-item" href="#">Mujeres</a>
+                            <a class="sub-menu-item" href="#">Campesinos, Indígenas y etnias</a>                        
                         </div>
                     </li>
 
@@ -134,7 +136,10 @@
                                 <a href="#">Coordinación por regiones</a>
                             </li>
                             <li>
-                                <a href="#">Primera Línea</a>
+                                <a href="#">Mujeres</a>
+                            </li>
+                            <li>
+                                <a href="#">Campesinos, Indígenas y etnias</a>
                             </li>
                         </ul>
                     </li>
@@ -292,6 +297,8 @@
                         <li><a class="filter" data-filter=".creative">Asambleas populares</a></li>
                         <li><a class="filter" data-filter=".education">Coordinación de regiones</a></li>
                         <li><a class="filter" data-filter=".blog">Primera Linea</a></li>
+                        <li><a class="filter" data-filter=".mujeres">Mujeres</a></li>
+                        <li><a class="filter" data-filter=".etnias">Campesinos, indígenas y etnias</a></li>
                     </ul>
                 </div>
                 <div class="portfolio-item-wrapper col-md-12 clearfix wow animated fadeInUp mt-100" data-wow-delay=".5s"
@@ -377,7 +384,7 @@
                         </figure>
                     </div>
 
-                    <div class="col-md-3 col-sm-6 col-xs-12 no-padding mix blog">
+                    <div class="col-md-3 col-sm-6 col-xs-12 no-padding mix mujeres">
                         <figure class="single-portfolio">
                             <img class="img-responsive" src="/assets/images/portfolio/work6.jpg" alt="">
                             <figcaption class="hover-content">
@@ -393,7 +400,7 @@
                         </figure>
                     </div>
 
-                    <div class="col-md-3 col-sm-6 col-xs-12 no-padding mix business blog education more">
+                    <div class="col-md-3 col-sm-6 col-xs-12 no-padding mix business blog etnias more">
                         <figure class="single-portfolio">
                             <img class="img-responsive" src="/assets/images/portfolio/work7.jpg" alt="">
                             <figcaption class="hover-content">
