--- a/info/que_sociedad_queremos.html
+++ b/info/que_sociedad_queremos.html
@@ -74,8 +74,9 @@
                             <a class="sub-menu-item" href="#">Arte para el pueblo</a>
                             <a class="sub-menu-item" href="#">Asambleas Populares</a>
                             <a class="sub-menu-item" href="#">Coordinación por regiones</a>
-                            <a class="sub-menu-item" href="#">Primera Línea</a>
-                        </div>
+<a class="sub-menu-item" href="#">Primera Línea</a>
+                            <a class="sub-menu-item" href="#">Mujeres</a>
+                            <a class="sub-menu-item" href="#">Campesinos, Indígenas y etnias</a>                        </div>
                     </li>
 
                 </ul>
@@ -132,7 +133,10 @@
                                 <a href="#">Coordinación por regiones</a>
                             </li>
                             <li>
-                                <a href="#">Primera Línea</a>
+                                <a href="#">Mujeres</a>
+                            </li>
+                            <li>
+                                <a href="#">Campesinos, Indígenas y etnias</a>
                             </li>
                         </ul>
                     </li>
