--- a/admon/index.html
+++ b/admon/index.html
@@ -44,6 +44,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="noticias.html">Noticias</a></li>
                     <li><a href="luchadores.html">Coordinación de luchadores</a></li>
+                    <li><a href="actualidad.html">Situación Actual</a></li>
                     <li><a href="redesociales.html">Redes sociales</a></li>
                 </ul>
             </div>
