corrección de bug y edición de luchadores

--- a/admon/luchadores.html
+++ b/admon/luchadores.html
@@ -166,23 +166,21 @@
                 <h3 class="panel-title">Vista Previa</h3>
               </div>
               <div class="panel-body">
-                <div id="main-slide" class="carousel slide carousel-fade" data-ride="carousel">
-                  <div class="carousel-inner">
-                      <div class="item active">
-                          <img id="info-imagen-0"class="img-responsive" src="/assets/images/slider/slider-bg4.jpg" alt="slider">
-                          <div class="slider-content">
-                              <div class="container">
-                                  <div class="row">
-                                      <div class="col-md-12 text-left">
-                                          <h1 id="info-titulo-0" class="slideInLeft  wow hero-heading" >Título</h1>
-                                          <h5 id="info-subtitulo-0" class="fadeInDown wow  hero-sub-heading" >Subtítulo</h5>
-                                      </div>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-                  </div>
+                <div class="col-md-3 col-sm-6 col-xs-12 no-padding mix creative more business">
+                  <figure class="single-portfolio">
+                      <img id="info-imagen-0" class="img-responsive" src="/assets/images/portfolio/work4.jpg" alt="">
+                      <figcaption class="hover-content">
+                          <a class="btn btn-round btn-fab btn-xs" href="portfolio-single.html"><i
+                                  class="material-icons">&#xE5C8;</i>
+                              <div class="ripple-container"></div>
+                          </a>
+                          <a href="#">
+                              <h2 id="info-titulo-0" class="subtitle">Bug of the day</h2>
+                          </a>
+                          <p id="info-subtitulo-0">Delhi, India</p>
+                      </figcaption>
+                  </figure>
+              </div>
               </div>
             </div>
           </div>
